unpackaged/main/default/objects/Record_Sync_Run__c/fields/Duplicated_Records__c.field-meta.xml
<CustomField>
    <fullName>Duplicated_Records__c</fullName>
    <label>Duplicated Records</label>
    <summaryForeignKey>Record_Sync__c.Record_Sync_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>