unpackaged/main/default/objects/Record_Sync_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Search In Progress</fullName>
                <default>true</default>
                <label>Search In Progress</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Ready to Sync</fullName>
            </value>
            <value>
                <fullName>Sync In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Records Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>